<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_3sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@id/tvProvince"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProvince"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/tvTitleConfirmed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/app_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/confirmed"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/tvConfirmed"
            app:layout_constraintLeft_toLeftOf="@id/tvConfirmed"
            app:layout_constraintRight_toRightOf="@id/tvConfirmed"
            app:layout_constraintTop_toBottomOf="@id/tvProvince" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvConfirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvRecovered"
            app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
            tools:text="@string/_11674" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleConfirmed"
            app:layout_constraintLeft_toLeftOf="@id/tvRecovered"
            app:layout_constraintRight_toRightOf="@id/tvRecovered"
            app:layout_constraintTop_toTopOf="@id/tvTitleConfirmed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvConfirmed"
            app:layout_constraintLeft_toRightOf="@id/tvConfirmed"
            app:layout_constraintRight_toLeftOf="@id/tvDeaths"
            app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
            tools:text="@string/_11674" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleConfirmed"
            app:layout_constraintLeft_toLeftOf="@id/tvDeaths"
            app:layout_constraintRight_toRightOf="@id/tvDeaths"
            app:layout_constraintTop_toTopOf="@id/tvTitleConfirmed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.FontBold"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvConfirmed"
            app:layout_constraintLeft_toRightOf="@id/tvRecovered"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
            tools:text="@string/_11674" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>