<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/semua_negara"
        android:textAppearance="@style/TextAppearance.FontBold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvTitleConfirmed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/confirmed"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/tvConfirmed"
        app:layout_constraintLeft_toLeftOf="@id/tvConfirmed"
        app:layout_constraintRight_toRightOf="@id/tvConfirmed"
        app:layout_constraintTop_toBottomOf="@id/tvCountry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.FontBold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvLastUpdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvRecovered"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
        tools:text="@string/_11674" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleConfirmed"
        app:layout_constraintLeft_toLeftOf="@id/tvRecovered"
        app:layout_constraintRight_toRightOf="@id/tvRecovered"
        app:layout_constraintTop_toTopOf="@id/tvTitleConfirmed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.FontBold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvConfirmed"
        app:layout_constraintLeft_toRightOf="@id/tvConfirmed"
        app:layout_constraintRight_toLeftOf="@id/tvDeaths"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
        tools:text="@string/_11674" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deaths"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleConfirmed"
        app:layout_constraintLeft_toLeftOf="@id/tvDeaths"
        app:layout_constraintRight_toRightOf="@id/tvDeaths"
        app:layout_constraintTop_toTopOf="@id/tvTitleConfirmed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.FontBold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvConfirmed"
        app:layout_constraintLeft_toRightOf="@id/tvRecovered"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmed"
        tools:text="@string/_11674" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmed"
        tools:text="@string/_11674" />
</androidx.constraintlayout.widget.ConstraintLayout>